@@ -1,3 +1,9 @@
+2015-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	- 評価値を編集したアイテムのみの表示と切り替えるボタンを追加
+
 2015-07-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
